[package]
name = "prost-google-rpc"
version = "0.1.0"
edition = "2021"

[features]
build = []

[dependencies]
heck = "0.5"
prost = "0.13"
prost-types = "0.13"
quote = "1.0"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
